# qr_conveyor

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
configs/: config_sample.yml
notebooks/: example.ipynb
notebooks/python_basics/: 00_Python.ipynb  01_Python.ipynb  02_Numpy.ipynb  03_Numpy.ipynb  04_Numpy.ipynb  05_Matplotlib.ipynb  06_Pandas.ipynb  07_Pandas.ipynb  08_Pandas.ipynb  09_Seaborn.ipynb
notebooks/python_basics/.ipynb_checkpoints/: 00_Python-checkpoint.ipynb  02_Numpy-checkpoint.ipynb  03_Numpy-checkpoint.ipynb  05_Matplotlib-checkpoint.ipynb  06_Pandas-checkpoint.ipynb  07_Pandas-checkpoint.ipynb
qr_conveyor/: __init__.py  types.py
qr_conveyor/database/: client.py  models.py
scripts/: generate_qr.py  main.py
